--- a/simple-todos-blaze/imports/ui/App.html
+++ b/simple-todos-blaze/imports/ui/App.html
@@ -8,6 +8,8 @@
             <h1>Todo List</h1>
         </header>
 
+        {{> form }}
+
         <ul>
             {{#each tasks}}
                 {{> task}}
@@ -18,4 +20,11 @@
 
 <template name="task">
     <li>{{text}}</li>
+</template>
+
+<template name="form">
+    <form class="task-form">
+        <input type="text" name="text" placeholder="Type to add new tasks" />
+        <button type="submit">Add Task</button>
+    </form>
 </template>
