--- a/simple-todos-blaze/imports/ui/App.html
+++ b/simple-todos-blaze/imports/ui/App.html
@@ -13,23 +13,30 @@
         </header>
 
         <div class="main">
-            {{> form }}
+            {{#if isUserLogged}}
+                <div class="user">
+                    {{getUser.username}} 🚪
+                </div>
+                {{> form }}
 
-            <ul class="tasks">
-                {{#each tasks}}
-                    {{> task}}
-                {{/each}}
-            </ul>
-            
-            <div class="filter">
-                <button id="hide-completed-button">
-                    {{#if hideCompleted}}
-                            Show All
-                    {{else}}
-                            Hide Completed
-                    {{/if}}
-                </button>
-            </div>
+                <ul class="tasks">
+                    {{#each tasks}}
+                        {{> task}}
+                    {{/each}}
+                </ul>
+                
+                <div class="filter">
+                    <button id="hide-completed-button">
+                        {{#if hideCompleted}}
+                                Show All
+                        {{else}}
+                                Hide Completed
+                        {{/if}}
+                    </button>
+                </div>
+            {{else}}
+                {{> login }}
+            {{/if}}
         </div>
     </div>
 </template>
